<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.speed.lunadownloader.DownloadActivity">
    <item android:id="@+id/action_select_all"
        android:title="@string/menu_action_select_all"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_done_all_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/action_deselect_all"
        android:title="@string/menu_action_deselect_all"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_close_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:title="@string/menu_action_delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
