<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.vivid.nanodownloader.setting.CustomPreference
        android:layout="@layout/custom_preference_layout"
        android:icon="@mipmap/ic_download_path"
        android:title="@string/download_path_setting"
        android:key="download_path"
        android:persistent="false" />
    <com.vivid.nanodownloader.setting.CustomSwitchPreference
        android:layout="@layout/custom_preference_layout"
        android:icon="@mipmap/ic_wifi_only"
        android:title="@string/wifi_network_only"
        android:key="download_wifi_only"
        android:defaultValue="false" />
    <com.vivid.nanodownloader.setting.CustomSwitchPreference
        android:layout="@layout/custom_preference_layout"
        android:icon="@mipmap/ic_auto_resume"
        android:title="@string/download_auto_resume"
        android:key="auto_resume"
        android:defaultValue="true" />
</PreferenceScreen>
